# MTGDeckBuilder

./: .cursorrules  .gitignore  .python-version  AGENTS.md  DBTEST.py  Meta.json  README.md  README.yaml.md  allprintings_test.py  app_main.py  dmir-deck.py  example_inventory.txt  export_inventory_to_csv.py  export_inventory_with_full_card_metadata.py  full_card_metadata_collection.csv  import_inventory.py  inventory_to_json.py  pretty_json.py  print_file_tree.py  profile_stats.profile  profile_yaml_deck_builder.py  pyproject.toml  pytest.ini  requirements.txt  schema.txt  setup.py  test_arena_import.py  testing_yaml_deck_builder.py  update_mtgjson.py  validate_arena_import.py  yaml_deck_filtering.py  yamlspecs.md
alembic/: env.py
backend/: app.py  config_adapter.py  deps.py
chat_gpt/: project_desc.md  roadmap.md  yamlspecs.md
deck_configs/: Inspiration_from_beyond.yaml  Izzet_Spells.yaml  commander_example.yaml  last_config.txt  quality_fallback_example.yaml
examples/: example.md  export_owned_cards_to_csv.py  owned_cards.csv  sample_yaml_deck_build.py
frontend/: index.html  package.json  vite.config.ts
inventory_files/: card inventory.txt  card_inventory_2025-03-14.txt
logic/: data_logic.py  inventory_logic.py
mtg_deck_builder/: README.md  __init__.py  arena_io.py  data_loader.py  snapshot_io.py  test_deck.py  test_deck_config.py  yaml_deck_builder.py
mtg_deckbuilder_ui/: __init__.py  app.py  app_config.py  cards.db-journal  collection_export.csv  poc.py  setup.py  startup.py
mtg_gradio_app/: app_main.py  requirements.txt
reference/: jskemator.py
(+244 files in other folders)
